--- a/package.json
+++ b/package.json
@@ -2,12 +2,12 @@
   "name": "nuxt-base",
   "type": "module",
   "private": true,
+  "packageManager": "pnpm@8.15.3",
   "scripts": {
     "build": "nuxt build .playground",
     "dev": "nuxt dev .playground",
     "generate": "nuxt generate .playground",
     "preview": "nuxt preview .playground",
-    "postinstall": "nuxt prepare",
     "lint": "eslint .",
     "lint:fix": "eslint . --fix",
     "prepare": "simple-git-hooks && nuxt prepare .playground"
@@ -16,7 +16,6 @@
     "@antfu/eslint-config": "^2.6.4",
     "@eslint/eslintrc": "^3.0.1",
     "@formkit/auto-animate": "^0.8.1",
-    "@nuxt/eslint-config": "^0.2.0",
     "@nuxt/kit": "^3.10.2",
     "@nuxtjs/color-mode": "^3.3.2",
     "@nuxtjs/device": "^3.1.1",
@@ -24,11 +23,12 @@
     "@nuxtjs/tailwindcss": "^6.11.4",
     "@pinia-plugin-persistedstate/nuxt": "^1.2.0",
     "@pinia/nuxt": "^0.5.1",
-    "@types/node": "^20.11.17",
+    "@types/node": "^20.11.19",
     "@vueuse/nuxt": "^10.7.2",
     "chalk": "^5.3.0",
     "eslint": "^8.56.0",
     "eslint-plugin-format": "^0.1.0",
+    "eslint-plugin-markdownlint": "^0.5.0",
     "eslint-plugin-perfectionist": "^2.5.0",
     "eslint-plugin-tailwindcss": "^3.14.2",
     "lint-staged": "^15.2.2",
@@ -37,13 +37,13 @@
     "nuxt-icon": "^0.6.8",
     "nuxt-lodash": "^2.5.3",
     "pinia": "^2.1.7",
-    "sass": "^1.70.0",
+    "sass": "^1.71.0",
     "simple-git-hooks": "^2.9.0",
     "vue": "^3.4.19",
     "vue-router": "^4.2.5"
   },
   "simple-git-hooks": {
-    "pre-commit": "pnpm lint:fix"
+    "pre-commit": "pnpm lint-staged"
   },
   "lint-staged": {
     "*": "pnpm lint:fix"
