--- a/package.json
+++ b/package.json
@@ -2,7 +2,7 @@
   "name": "nuxt-base",
   "type": "module",
   "private": true,
-  "packageManager": "pnpm@8.15.3",
+  "packageManager": "pnpm@8.15.4",
   "scripts": {
     "build": "nuxt build .playground",
     "dev": "nuxt dev .playground --open",
@@ -15,34 +15,35 @@
     "prepare": "simple-git-hooks && nuxt prepare .playground && pnpm prepare:antd && pnpm prepare:daisyui"
   },
   "devDependencies": {
-    "@antfu/eslint-config": "^2.6.4",
-    "@eslint/eslintrc": "^3.0.1",
+    "@antfu/eslint-config": "^2.8.0",
+    "@eslint/eslintrc": "^3.0.2",
     "@formkit/auto-animate": "^0.8.1",
-    "@nuxt/kit": "^3.10.2",
+    "@nuxt/kit": "^3.10.3",
     "@nuxtjs/color-mode": "^3.3.2",
     "@nuxtjs/device": "^3.1.1",
     "@nuxtjs/i18n": "^8.1.1",
     "@nuxtjs/tailwindcss": "^6.11.4",
     "@pinia-plugin-persistedstate/nuxt": "^1.2.0",
     "@pinia/nuxt": "^0.5.1",
-    "@types/node": "^20.11.19",
-    "@vueuse/nuxt": "^10.7.2",
+    "@tailwindcss/typography": "^0.5.10",
+    "@types/node": "^20.11.24",
+    "@vueuse/nuxt": "^10.9.0",
     "chalk": "^5.3.0",
-    "eslint": "^8.56.0",
+    "eslint": "^8.57.0",
     "eslint-plugin-format": "^0.1.0",
     "eslint-plugin-markdownlint": "^0.5.0",
-    "eslint-plugin-perfectionist": "^2.5.0",
-    "eslint-plugin-tailwindcss": "^3.14.2",
+    "eslint-plugin-perfectionist": "^2.6.0",
+    "eslint-plugin-tailwindcss": "^3.14.3",
     "lint-staged": "^15.2.2",
-    "magic-string": "^0.30.7",
-    "nuxt": "^3.10.2",
+    "magic-string": "^0.30.8",
+    "nuxt": "^3.10.3",
     "nuxt-icon": "^0.6.8",
     "nuxt-lodash": "^2.5.3",
     "pinia": "^2.1.7",
-    "sass": "^1.71.0",
-    "simple-git-hooks": "^2.9.0",
-    "vue": "^3.4.19",
-    "vue-router": "^4.2.5"
+    "sass": "^1.71.1",
+    "simple-git-hooks": "^2.10.0",
+    "vue": "^3.4.21",
+    "vue-router": "^4.3.0"
   },
   "simple-git-hooks": {
     "pre-commit": "pnpm lint-staged"
